...
                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DnW-5Y-l9g">
                                <rect key="frame" x="87.5" y="185" width="200" height="30"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cPs-AL-bv2" customClass="CustomTextField" customModule="ExchangeApp" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="fromtextfield"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="conversion_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="Da6-Nd-Xxw">
                                        <rect key="frame" x="80" y="0.0" width="40" height="30"/>
                                        <constraints>
...
                                            <constraint firstAttribute="height" constant="30" id="vqI-4T-7ek"/>
                                        </constraints>
                                    </imageView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lQz-27-pR1" customClass="CustomTextField" customModule="ExchangeApp" customModuleProvider="target">
                                        <rect key="frame" x="120" y="0.0" width="80" height="30"/>
                                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="totextfield"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="lQz-27-pR1" firstAttribute="width" secondItem="cPs-AL-bv2" secondAttribute="width" id="bvo-4M-vCA"/>
                                    <constraint firstAttribute="width" constant="200" id="fcQ-LC-AIl"/>
                                </constraints>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l0s-oP-f1H" customClass="CustomButton" customModule="ExchangeApp" customModuleProvider="target">
                                <rect key="frame" x="107.5" y="487" width="160" height="30"/>
                                <color key="backgroundColor" red="0.92156863209999995" green="0.3058823645" blue="0.23921570180000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <accessibility key="accessibilityConfiguration" identifier="calculate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="KAf-Y4-HXr"/>
                                    <constraint firstAttribute="width" constant="160" id="cZv-G4-MOS"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Calculate">
...
