...
                self.toCurrencySelected = value
            }, defaultValue: toCurrencySelected)
            toTextField.setup(inputView: self.toPicker, text: toCurrencySelected.rawValue)
        }
    }
    
    private var fromPicker: CustomPickerView = CustomPickerView()
    private var toPicker: CustomPickerView = CustomPickerView()
    var fromCurrencySelected: CurrencyEntity = .GBP {
        didSet {
            fromTextField.text = fromCurrencySelected.rawValue
        }
    }
    
...
